Revert "Merge remote-tracking branch 'origin' into features/topology"
This reverts commit 3b3c99c1547bbd705efc4a74c612dbbc55de3564, reversing
changes made to 56974677f65d0eaaba5bdcf2e62e7acfde204e27.